--- a/src/AppBundle/Resources/views/Admin/admin.html.twig
+++ b/src/AppBundle/Resources/views/Admin/admin.html.twig
@@ -1,13 +1,10 @@
 {% extends '::base.html.twig' %}
 
 {%  block body %}
-    <ol>
+    <ul>
         <li><a href = "{{ path('category') }}">Edit categories</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ol>
+        <li><a href = "{{ path('product') }}">Edit products</a></li>
+    </ul>
 
 
 
