--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
             <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+            <link rel="stylesheet" href="{{ asset('css/my.css') }}" />
         {% endblock %}
     </head>
     <body>
@@ -49,7 +50,14 @@
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
                     <ul class="nav navbar-nav navbar-right">
+                        {% if app.user %}
+                        <li><div class="witaj">Welcome: {{ app.user.username }}</div></li>
+                        <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                        {% elseif not app.user %}
+                        <li><a href="{{ path('fos_user_security_login') }}">Sign in</a></li>
+                        <li><a href="/register">Sign up</a></li>
                         <li><a href="#">Link</a></li>
+                        {% endif %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -72,5 +80,7 @@
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
     {% endblock %}
 
+    {% block fos_user_content %}
+    {% endblock fos_user_content %}
     </body>
 </html>
