uploading a picture done with name change, addec back buttons in admin panel

--- a/src/AppBundle/Resources/views/Product/index.html.twig
+++ b/src/AppBundle/Resources/views/Product/index.html.twig
@@ -39,11 +39,10 @@
         </tbody>
     </table>
 
-        <ul>
+    <ul>
         <li>
-            <a href="{{ path('product_new') }}">
-                Create a new entry
-            </a>
-        </li>
+            <a href="{{ path('product_new') }}">Create a new entry</a>
+         </li>
     </ul>
+    <a href="/admin" class="btn btn-default">Back</a>
     {% endblock %}
