--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
-            <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
-             <link rel="stylesheet" href="{{ asset('css/my.css') }}" />
+            <link rel="stylesheet" href="{{ asset('css/my.css') }}" />
         {% endblock %}
 
     </head>
     <body>
     {% block logo %}
         <div class="row">
-            <div class="col-lg-3"><a href = "{{ path('homepage') }}"></a><img src="{{ asset('images/khemzacz.sklep.pl.png') }}"></div>
+            <div class="col-lg-3"><a href = "{{ path('homepage') }}"><img src="{{ asset('images/khemzacz.sklep.pl.png') }}"></a></div>
             <div class="col-lg-7" >
                 <div class = "not-a-real-shop">
                     <ul>
@@ -95,24 +94,11 @@
     {% block javascripts %}
         <script src="{{ asset('js/jquery-2.2.1.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <!--<script src="{{ asset('js/ui-bootstrap-tpls-1.3.1.min.js') }}"></script> --> <!--boostrap ui dla angular nie wiem jeszcze konkretnie po co mi to -->
         <script src="{{ asset('js/angular.min.js') }}"></script>
 
 
-        <script>
-            var myApp = angular.module('myApp', []);
 
-            myApp.controller('Menu', function ($scope, $http){
-                this.test ="lista Kategorii";
-                var self = this;
-                $http.get('/search/getCategoriesTree').success(function(data){
-                    self.positions = data.mainCategories;
-
-                });
-
-            });
-
-
-        </script>
 
     {% endblock %}
 
@@ -121,35 +107,7 @@
 
     {% endblock %}
 
-    {% verbatim %}
-        <div ng-controller="Menu as C">
-            <script type="text/ng-template" id="treeRenderer.html">
-                <a href="" ng-if="category.podKategorie" ng-click="category.show = !category.show" >{{ category.nazwaKategorii }}</a>
-                <a href="" ng-if="!category.podKategorie">{{ category.nazwaKategorii }}</a> <!-- tu ma isc reakcja na ostateczna kategorie tj. wyswietlic liste produktow w tej kategorii-->
-                <ul ng-if="category.podKategorie" ng-init="upCat=category">
-                    <li ng-repeat="category in category.podKategorie" ng-include="'treeRenderer.html'" ng-show="upCat.show"></li>
-                </ul>
 
-            </script>
-            <ul>
-                <li ng-repeat="category in C.positions" ng-include="'treeRenderer.html'"></li>
-            </ul>
-        </div>
-
-
-        <!--
-            <button ng-click="C.refresh()">kategoria1</button>
-            <td ng-repeat="item in C.positions">
-                {{ item.nazwaKategori }}
-
-             </td>
-        <ul ng-controller="Menu as C">
-            <li ng-repeat="item in C.positions"><a href="" ng-click="C.subCategories(item.idKategorii)">{{ item.nazwaKategorii }}</a></li>
-
-        </ul>-->
-
-
-    {% endverbatim %}
 
     {% block fos_user_content %}
     {% endblock fos_user_content %}
