--- a/src/AppBundle/Resources/views/Index/index.html.twig
+++ b/src/AppBundle/Resources/views/Index/index.html.twig
@@ -1,6 +1,65 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
+    <div ng-app="myApp">
 
+
+
+    <script>
+        var myApp = angular.module('myApp', []);
+
+        myApp.controller('Menu', function ($scope, $http){
+            this.test ="lista Kategorii";
+            var self = this;
+            $http.get('/search/getCategoriesTree').success(function(data){
+                self.positions = data.mainCategories;
+
+            });
+            self.getProducts = function(idCat){
+                $http.get("/search/getProductsByCategory/"+idCat).success(function(data){
+                    self.products = data.products;
+                });
+            };
+            self.productDetails = function(idProd){
+                self.products = null;
+                $http.get("/search/getProductById/"+idProd).success(function(data){
+                    self.product = data.product;
+                });
+            };
+
+
+        });
+
+
+    </script>
+
+    {% verbatim %}
+    <div ng-controller="Menu as C" class="row">
+        <div class="col-lg-3">
+            <script type="text/ng-template" id="treeRenderer.html">
+                <a href="" ng-if="category.podKategorie != ''" ng-click="category.show = !category.show" >{{ category.nazwaKategorii }}</a>
+                <a href="" ng-if="category.podKategorie == ''" ng-click="C.getProducts(category.idKategorii)">{{ category.nazwaKategorii }}</a> <!-- tu ma isc reakcja na ostateczna kategorie tj. wyswietlic liste produktow w tej kategorii-->
+                <ul ng-if="category.podKategorie" ng-init="upCat=category">
+                    <li ng-repeat="category in category.podKategorie" ng-include="'treeRenderer.html'" ng-show="upCat.show"></li>
+                </ul>
+
+            </script>
+            <ul>
+                <li ng-repeat="category in C.positions" ng-include="'treeRenderer.html'"></li>
+            </ul>
+        </div>
+
+        <div class="col-lg-7">
+            <table>
+                <tr ng-repeat="product in C.products">
+                    <td><a href="" ng-click="C.productDetails(product.id)" ng-click="">{{ product.nazwa }}</a></td>
+                </tr>
+
+            </table>
+
+
+        </div>
+    </div>
+    {% endverbatim %}
+
+    </div>
 {% endblock %}
-
