--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,12 +45,13 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Link</a></li>
+                        <li ng-controller="Order as C"><a href="#/">Place an order</a></li>
                         <li class="dropdown" ng-controller="Basket as B">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Basket <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 {%  verbatim %}
-                                    <li ng-repeat="prod in products">{{ prod.nazwa }}: {{ prod.ilosc }} </li>
+                                    <li ng-repeat="prod in products">{{ prod.nazwa }}: {{ prod.ilosc }}, {{ prod.cena*prod.ilosc }} zł </li>
+                                    <li></li>
                                 {% endverbatim %}
                             </ul>
                         </li>
@@ -207,6 +208,10 @@
                     //Orders.addOrder($scope.product);
                     productService.addProduct($scope.product);
                     $location.path('/');
+                }
+                self.order = function(){
+
+
                 }
 
             });
