- Deleting from basket onclick.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,7 +52,7 @@
                             <a class="dropdown-toggle" ng-click="B.refreshBasket()" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Basket <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 {%  verbatim %}
-                                    <li ng-repeat="prod in products">{{ prod.nazwa }}: {{ prod.ilosc }}, {{ prod.cena*prod.ilosc }} zł </li>
+                                    <li ng-repeat="prod in products">{{ prod.nazwa }}: {{ prod.ilosc }}, {{ prod.cena*prod.ilosc }} zł<div ng-click="B.removeProduct(prod)" style="width: 2vh; height: 2vh;">{% endverbatim %}<img src="{{ asset('images/trash_icon.png') }}" style="width: auto; height: 100%;">{% verbatim %}</div></li>
                                     <li></li>
                                 {% endverbatim %}
                             </ul>
@@ -133,6 +133,15 @@
                     return product;
                 };
 
+                var removeProduct = function(product){
+                    for (var i=0;i<productList.length;i++){
+                        if(productList[i]==product){
+                            productList.splice(i,1);
+                            break;
+                        }
+                    }
+                };
+
                 var removeAllProducts = function(){
                     productList = [];
                 };
@@ -142,6 +151,7 @@
                     setProduct: setProduct,
                     getProduct: getProduct,
                     getProducts: getProducts,
+                    removeProduct: removeProduct,
                     removeAllProducts: removeAllProducts
                 };
 
@@ -247,6 +257,11 @@
 
                 self.refreshBasket = function(){
                     $scope.products = productService.getProducts();
+                };
+
+                self.removeProduct = function(product){
+                    productService.removeProduct(product);
+                    self.refreshBasket();
                 };
             });
 
