--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         {% if app.user %}
-                            <li ng-controller="Order as O"><a ng-click="O.showMyOrders({{ app.user.id }})">My orders</a></li>
+                            <li ng-controller="Order as O"><a id="my-orders" ng-click="O.showMyOrders({{ app.user.id }})" href="#/">My orders</a></li>
                             <li ng-controller="Order as O"><a ng-click="O.placeAnOrder({{ app.user.id }})" href="#/">Place an order</a></li>
                         {% endif %}
                         <li class="dropdown" ng-controller="Basket as B">
@@ -238,11 +238,13 @@
                 };
             });
 
-            myApp.controller('Order', function($scope, $http, $location, productService){
+            myApp.controller('Order', function($scope, $http, $location, $route, productService){
                 var self = this;
                 var amount = 0;
                 self.orders = productService.getOrders();
                 $scope.product = productService.getProduct();
+
+
                 self.submit = function(){
                     $scope.product.ilosc= self.amount;
                     //Orders.addOrder($scope.product);
@@ -285,8 +287,14 @@
                             productService.addOrder(self.orders[i]);
                         }
                         $location.path('/myOrders');
+                        $route.reload();
                     });
                 };
+
+                if($location.path() === '/myOrders'){
+                    //angular.element('#my-orders').trigger('click');
+                    //$('#my-orders').click();
+                }
             });
 
             myApp.controller('Basket', function($scope,$http, productService){
