--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,12 +58,12 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-left" role="search">
+                    <div class="navbar-form navbar-left" role="search">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
+                            <input type="text" class="form-control" placeholder="Search for products" ng-change="">
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
+                        <button type="submit" class="btn btn-default">Search</button>
+                    </div>
                     <ul class="nav navbar-nav navbar-right">
                         {% if app.user %}
                         <li><div class="witaj">Welcome: {{ app.user.username }}</div></li>
